--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "BayesVarSel"]
+	path = BayesVarSel
+	url = https://github.com/comodin19/bayesvarsel
+	shallow = true
+	registered = true
